--- a/dendron.yml
+++ b/dendron.yml
@@ -26,7 +26,7 @@ workspace:
     vaults:
         -
             fsPath: .
-            name: /Dendron-Template
+            name: Dendron-Template
             selfContained: true
     journal:
         dailyDomain: daily
