--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-
+    
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
@@ -23,6 +23,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         if [ -f env/requirements.txt ]; then pip install -r env/requirements.txt; fi
+        python -m pip install -e .
 
     - name: Run pytest
       run: |
