--- a/.github/workflows/python_app.yaml
+++ b/.github/workflows/python_app.yaml
@@ -24,8 +24,17 @@ jobs:
         python -m pip install --upgrade pip
         if [ -f env/requirements.txt ]; then pip install -r env/requirements.txt; fi
         python -m pip install -e .
+        pip install mypy black
 
     - name: Run pytest
       run: |
         cd tests
         pytest
+
+    - name: Run MyPy
+      run: |
+        mypy src
+
+    - name: Check Code Style with Black
+      run: |
+        black --check src
