--- a/.github/workflows/python_app.yaml
+++ b/.github/workflows/python_app.yaml
@@ -8,7 +8,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -24,17 +23,17 @@ jobs:
         python -m pip install --upgrade pip
         if [ -f env/requirements.txt ]; then pip install -r env/requirements.txt; fi
         python -m pip install -e .
-        pip install mypy black
 
-    - name: Run pytest
+    - name: Run pytest with coverage
       run: |
         cd tests
-        pytest
+        coverage run -m pytest
 
-    - name: Run MyPy
-      run: |
-        mypy src
+    - name: Generate coverage report
+      run: coverage xml
 
-    - name: Check Code Style with Black
-      run: |
-        black --check src
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v2
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        fail_ci_if_error: true
