--- a/.github/workflows/python_app.yaml
+++ b/.github/workflows/python_app.yaml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
     steps:
@@ -28,12 +29,10 @@ jobs:
       run: |
         cd tests
         coverage run -m pytest
-
-    - name: Generate coverage report
-      run: coverage xml
+        coverage xml
 
     - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v2
+      uses: codecov/codecov-action@v1
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
-        fail_ci_if_error: true
+        file: ./coverage.xml
