--- a/.github/workflows/python_app.yaml
+++ b/.github/workflows/python_app.yaml
@@ -31,8 +31,7 @@ jobs:
         coverage run -m pytest
         coverage xml
 
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v1
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
-        file: ./coverage.xml
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v3
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
