--- a/.github/workflows/python_app.yaml
+++ b/.github/workflows/python_app.yaml
@@ -24,6 +24,15 @@ jobs:
         python -m pip install --upgrade pip
         if [ -f env/requirements.txt ]; then pip install -r env/requirements.txt; fi
         python -m pip install -e .
+        python -m pip install mypy black
+
+    - name: Check typing with MyPy
+      run: |
+        mypy src
+
+    - name: Check formatting with Black
+      run: |
+        black --check src
 
     - name: Run pytest with coverage
       run: |
